<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="two_players">Two players</string>
    <string name="day_night">Day/Night</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="_0_0">0 - 0</string>
</resources>