<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="6dp">

    <RadioGroup
        android:id="@+id/rgModes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbEasy"
            style="@style/BottomSheetModeItem"
            android:text="@string/easy" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbMedium"
            style="@style/BottomSheetModeItem"
            android:text="@string/medium" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbHard"
            style="@style/BottomSheetModeItem"
            android:text="@string/hard" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbTwoPlayers"
            style="@style/BottomSheetModeItem"
            android:text="@string/two_players" />

    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchDayNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_night"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgModes" />

</androidx.constraintlayout.widget.ConstraintLayout>